--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div id="box1">
 				<h1>Bienvenue sur mon site!</h1>
 			</div>
-				<image src="images/profile-picture.jpg" id="profileimg" alt="Tanguy Moncler" height="250" width="250" style="position: absolute; top: 50px; left: 100px;">
+				<image src="images/profile-picture.JPG" id="profileimg" alt="Tanguy Moncler" height="250" width="250" style="position: absolute; top: 50px; left: 100px;">
 			<div id="box2">
 				<h3>
 					<p>
